- tableview data source test cases

--- a/Filmfest_UnitTesting/Base.lproj/Main.storyboard
+++ b/Filmfest_UnitTesting/Base.lproj/Main.storyboard
@@ -49,10 +49,12 @@
                         </constraints>
                     </view>
                     <connections>
+                        <outlet property="dataService" destination="msp-EZ-XTv" id="kfJ-bV-boK"/>
                         <outlet property="libraryTableView" destination="cMd-1R-wJy" id="duM-PJ-RlH"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
+                <customObject id="msp-EZ-XTv" customClass="MovieLibraryDataService" customModule="Filmfest_UnitTesting" customModuleProvider="target"/>
             </objects>
             <point key="canvasLocation" x="18.840579710144929" y="65.625"/>
         </scene>
